--- a/src/app/club/club.component.html
+++ b/src/app/club/club.component.html
@@ -17,7 +17,9 @@
 
         2022, notre progression du nombre d’adhérents se poursuit, une nouvelle organisation se met en place pour gérer l’apprentissage.<br /><br />
 
-        En mars 2023, nous avons organisé un après-midi initiation suivie d’une soirée concert avec le groupe DUSTY ROADS, un grand succès qui nous a motivé pour le futur. En avril, notre premier bal CD fut une belle réussite. Au dernier trimestre, nous avons créé un cours de danse Partner « couple ». Nous avons terminé la saison avec 39 adhérents.<br /><br />
+        En mars 2023, nous avons organisé un après-midi initiation suivie d’une soirée concert avec le groupe DUSTY ROADS, un grand succès qui nous a motivé pour le futur.<br /><br />
+        
+        En avril, notre premier bal CD fut une belle réussite. Au dernier trimestre, nous avons créé un cours de danse Partner « couple ». Nous avons terminé la saison avec 39 adhérents.<br /><br />
 
         Pour cette nouvelle saison qui débute, une nouvelle organisation des cours et des animateurs : nous avons rajouté un créneau horaire pour les grands débutants le jeudi dans une nouvelle salle de danse aménagée par la municipalité, nous avons opté pour mettre un maximum de moyens pour les débutants.<br /><br />
 
@@ -35,10 +37,10 @@
             <img src="/assets/img/club-photos/Louis.png" alt="président du club">
             <img src="/assets/img/club-photos/Frédéric.png" alt="président adjoint">
             <img src="/assets/img/club-photos/Joëlle.png" alt="trésorière">
+            <img src="/assets/img/club-photos/Martine.png" alt="trésorière adjointe">
             <img src="/assets/img/club-photos/Philippe.png" alt="secrétaire">
             <img src="/assets/img/club-photos/Sandrine.png" alt="secrétaire adjointe">
             <img src="/assets/img/club-photos/Nathalie.png" alt="animatrice">
-            <img src="/assets/img/club-photos/Martine.png" alt="animatrice">
         </div>
     </section>
 </div>
