--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,7 +6,7 @@
             Très vite est venu le partage de la musique country avec de nouveaux membres pour apprendre la
             danse, une équipe de présentation s’est façonnée, qui aujourd’hui est heureuse de présenter sa passion, lors de différentes manifestations.<br><br>
             Un groupe où règne la joie du partage d’une passion pour la danse en ligne country, 5 ans de vie de l’association qui compte 39 membres.<br><br>
-            Tous les mercredis nous nous retrouvons pour l’apprentissage des danses Partner «couple» commencées en cours d’année. En ligne, nous découvrons de belles chorégraphies et musiques qui nous rassemblent et nous détendent.<br><br>
+            Tous les jeudis à partir du mois d'octobre nous nous retrouvons pour l’apprentissage des danses Partner «couple» commencées en cours d’année dernière. En ligne, nous découvrons de belles chorégraphies et musiques qui nous rassemblent et nous détendent.<br><br>
             Aujourd’hui nous vous présentons un site internet, pour faire profiter au plus grand nombre la vie de notre passion. C’est avec fierté mais humilité que je Préside cette association de bénévoles qui s’investissent tout au long de l’année, merci à tous pour cet engagement et fidélité.<br><br>
             Pour la rentrée 2023/2024, soit le 13 septembre, une nouvelle organisation avec de <b><u>nouveaux horaires</u></b>. Des soirées dansantes sont programmées au fil du temps.<br><br>
             Je ne peux que vous inviter à nous rejoindre, pour partager cette passion qui est la Musique et la danse Country. Nous présenterons des danses lors de la <b><u>fête des associations</u></b> le 10 septembre prochain.<br><br>
