--- a/src/app/b-aba/b-aba.component.html
+++ b/src/app/b-aba/b-aba.component.html
@@ -1,1 +1,34 @@
-<p>b-aba works!</p>
+<app-nav></app-nav>
+<div class="container-baba">
+    <div class="head">
+        <h2>B-a-ba de la Country</h2>
+        <a target="_blank" href="/assets/docs/ba-ba.pdf" class="btn secondary">Télécharger le document</a>
+    </div>
+
+    <mat-tab-group>
+        <mat-tab label="Histoire de la Country">
+          <h1>Some tab content</h1>
+          <p>...</p>
+        </mat-tab>
+        <mat-tab label="Principe">
+          <h1>Some more tab content</h1>
+          <p>...</p>
+        </mat-tab>
+        <mat-tab label="Pot commun">
+          <h1>Some more tab content</h1>
+          <p>...</p>
+        </mat-tab>
+        <mat-tab label="L'étiquette de la piste">
+            <h1>Some more tab content</h1>
+            <p>...</p>
+        </mat-tab>
+        <mat-tab label="Les pas">
+            <h1>Some more tab content</h1>
+            <p>...</p>
+        </mat-tab>
+        <mat-tab label="Pourquoi pratiquer la danse Country ?">
+            <h1>Some more tab content</h1>
+            <p>...</p>
+        </mat-tab>
+    </mat-tab-group>
+</div>
