REFACTOR : add histoire de la country tab content

--- a/src/app/b-aba/b-aba.component.html
+++ b/src/app/b-aba/b-aba.component.html
@@ -4,31 +4,51 @@
         <h2>B-a-ba de la Country</h2>
         <a target="_blank" href="/assets/docs/ba-ba.pdf" class="btn secondary">Télécharger le document</a>
     </div>
+    <section>
+        <mat-tab-group>
+            <mat-tab label="Histoire de la Country">
+                <div class="tab-content">
+                    <img src="/assets/img/b-a-ba/illu-histoire-country.png" alt="illustration histoire de la country" />
+                    <p>
+                        <strong>Extrait...</strong><br /><br /> 
+                        
+                        La country dance (littéralement « danse paysanne » ou « danse du pays ») ou <strong>danse country</strong> est une danse anglaise du XVIIe siècle, à l'origine de la contredanse.<br /><br />
+        
+                        Elle se danse à quatre, six ou huit danseurs, voire davantage. Les danseurs sont disposés en cercle, en carré ou en deux colonnes. Très vite, c'est cette dernière formation qui prévaut, permettant le déroulement progressif de la danse pour un nombre illimité de danseurs. Si les figures sont précises, à l'origine les pas sont souvent laissés à
+                        la fantaisie du danseur et ne se fixeront qu'au XIXe siècle.<br /><br />
+        
+                        La première publication de danses country date de 1651, lorsque John Playford fait paraître la première édition de The English Dancing Master, qui contient la musique et les instructions de 105 danses (la première danse de la collection, "Upon a Summers Day"). Elle s'est bien vendue, et une deuxième édition a été produite l'année suivante. En tout, Playford, et plus tard son fils Henry Playford et d'autres, ont produit 18 éditions jusqu'en 1728, ajoutant ou supprimant des danses au gré des tendances et des modes.<br /><br />
+        
+                        La danse country a gagné en popularité dans toute l'Angleterre, ainsi qu'en Écosse, en Irlande, en Europe et dans les colonies américaines. Les "assemblées" publiques introduites au 18ème siècle, tenues dans des salles de bal accessibles au public, ont rendu la danse country disponible aux nouvelles classes moyennes montantes aussi bien qu'à l'aristocratie. Les éditeurs et les chorégraphes rivalisaient avec les collections annuelles de nouvelles danses pour nourrir l'appétit croissant, et les maîtres de la danse ont bâti des carrières en enseignant le style et le répertoire.<br /><br />
+                        
+                        La première influence de ce que nous appelons aujourd'hui la danse country (ou "country/western") vient d'Europe. Les colons d'Angleterre, d'Écosse et d'Irlande ont apporté des formes de danse provenant des festivals de country (toujours exécutées comme "contredanse") ainsi que des danses plus courtoises comme la pavane.<br /><br />
+        
+                        L'intérêt pour la danse country anglaise a atteint son apogée à la fin du XVIIIe siècle (comme le décrivent, par exemple, les romans et les lettres de Jane Austen), puis s'est rapidement estompé à mesure que la danse sociale dans la société était révolutionnée par l'introduction de la valse, de la polka et d'autres danses de couple au début du XIXe siècle.<br /><br />
 
-    <mat-tab-group>
-        <mat-tab label="Histoire de la Country">
-          <h1>Some tab content</h1>
-          <p>...</p>
-        </mat-tab>
-        <mat-tab label="Principe">
-          <h1>Some more tab content</h1>
-          <p>...</p>
-        </mat-tab>
-        <mat-tab label="Pot commun">
-          <h1>Some more tab content</h1>
-          <p>...</p>
-        </mat-tab>
-        <mat-tab label="L'étiquette de la piste">
-            <h1>Some more tab content</h1>
-            <p>...</p>
-        </mat-tab>
-        <mat-tab label="Les pas">
-            <h1>Some more tab content</h1>
-            <p>...</p>
-        </mat-tab>
-        <mat-tab label="Pourquoi pratiquer la danse Country ?">
-            <h1>Some more tab content</h1>
-            <p>...</p>
-        </mat-tab>
-    </mat-tab-group>
+                        <strong class="doc">... lire la suite de l'article sur le document pdf téléchargeable</strong><br class="clear" />
+                    </p>
+                </div>
+            </mat-tab>
+            <mat-tab label="Principe">
+              <h1>Some more tab content</h1>
+              <p>...</p>
+            </mat-tab>
+            <mat-tab label="Pot commun">
+              <h1>Some more tab content</h1>
+              <p>...</p>
+            </mat-tab>
+            <mat-tab label="L'étiquette de la piste">
+                <h1>Some more tab content</h1>
+                <p>...</p>
+            </mat-tab>
+            <mat-tab label="Les pas">
+                <h1>Some more tab content</h1>
+                <p>...</p>
+            </mat-tab>
+            <mat-tab label="Pourquoi pratiquer la danse Country ?">
+                <h1>Some more tab content</h1>
+                <p>...</p>
+            </mat-tab>
+        </mat-tab-group>
+    </section>
 </div>
