REFACTOR : add principe tab content

--- a/src/app/b-aba/b-aba.component.html
+++ b/src/app/b-aba/b-aba.component.html
@@ -30,8 +30,19 @@
                 </div>
             </mat-tab>
             <mat-tab label="Principe">
-              <h1>Some more tab content</h1>
-              <p>...</p>
+                <div class="tab-content">
+                    <p>
+                        <strong>Extrait...</strong><br /><br /> 
+                        
+                        La country se danse sur tous les types de musique country : valse, cha-cha-cha, irlandais, rock, pop, voire tango, etc.<br /><br />
+
+                        Chaque musique jouée lors d'un bal country peut donner lieu à l'exécution d'une ou plusieurs chorégraphies. Une même chorégraphie peut être effectuée sur plusieurs musiques. Aujourd'hui, il existe plus de 2 000 chorégraphies. Le principe est simple : il faut répéter une chorégraphie sur un certain nombre de murs. Le mur de départ, appelé le mur de 12 heures, est par convention celui se situant face aux musiciens lors d'un concert, face au public sinon. Les danses sont majoritairement composées de deux ou quatre murs, mais certaines n'en ont qu'un seul, et d'autres se dansent en cercle, en couple (danse partner) ou face-à-face (danse contra).<br /><br />
+
+                        Les chorégraphies sont composées de sections de 8 temps (6 dans le cas des valses). Les danses les plus courtes font 16 temps (très rarement moins), la grande majorité des danses faisant 32, 48 ou 64 temps, et quelquefois beaucoup plus. Certaines dépassent les 100 temps.<br /><br />
+
+                        <strong class="doc">... lire la suite de l'article sur le document pdf téléchargeable</strong><br class="clear" />
+                    </p>
+                </div>
             </mat-tab>
             <mat-tab label="Pot commun">
               <h1>Some more tab content</h1>
