--- a/src/app/b-aba/b-aba.component.html
+++ b/src/app/b-aba/b-aba.component.html
@@ -40,21 +40,78 @@
 
                         Les chorégraphies sont composées de sections de 8 temps (6 dans le cas des valses). Les danses les plus courtes font 16 temps (très rarement moins), la grande majorité des danses faisant 32, 48 ou 64 temps, et quelquefois beaucoup plus. Certaines dépassent les 100 temps.<br /><br />
 
-                        <strong class="doc">... lire la suite de l'article sur le document pdf téléchargeable</strong><br class="clear" />
+                        <strong class="doc">... lire la suite de l'article sur le document pdf téléchargeable</strong><br clear="both" />
                     </p>
                 </div>
             </mat-tab>
             <mat-tab label="Pot commun">
-              <h1>Some more tab content</h1>
-              <p>...</p>
+                <div class="tab-content">
+                    <p>
+                        Une à deux fois par an, les animateurs se réunissent pour élire des danses à intégrer dans les programmes d'apprentissage et dans les bals. Le « Pot commun national » est un petit guide qui permet à chaque danseur de retrouver ce qui se danse le plus un peu partout en France. De plus, chaque région possède son propre Pot commun.<br /><br />
+
+                        Chaque animateur propose plusieurs chorégraphies de différents niveaux et différents styles. Les animateurs votent ensuite pour les chorées qu'ils préfèrent. Les chorégraphies emportant la majorité des votes sont élues.
+                    </p>
+                </div>
             </mat-tab>
             <mat-tab label="L'étiquette de la piste">
-                <h1>Some more tab content</h1>
-                <p>...</p>
+                <div class="tab-content">
+                    <p>
+                        L’étiquette est le « savoir-vivre » sur une piste de danse, autrement dit le « savoir-danser ». Il est donc de rigueur de connaître les règles à respecter sur une piste de danse afin que chacun puisse profiter pleinement de la piste.
+                    </p><br />
+                    <h3>Les lignes</h3><br />
+                    <img src="/assets/img/b-a-ba/illu-lignes.png" alt="illustration les lignes" />
+                    <p>
+                        <strong>Extrait...</strong><br /><br /> 
+                        
+                        Il est important de respecter les lignes, pour bien suivre tout d’abord mais aussi pour l’esthétisme de la piste de danse ! Les danseurs en ligne doivent être alignés dans les deux sens, avec ceux qui sont à côtés d’eux mais aussi ceux qui sont devant et derrière !<br /><br />
+
+                        <strong class="doc">... lire la suite de l'article sur le document pdf téléchargeable</strong><br clear="both" />
+                    </p><br />
+                    <h3>Découpage de la piste de danse</h3><br />
+                    <img class="decoupage" src="/assets/img/b-a-ba/illu-decoupage-piste.png" alt="illustration découpage de la piste" />
+                </div>
             </mat-tab>
             <mat-tab label="Les pas">
-                <h1>Some more tab content</h1>
-                <p>...</p>
+                <div class="tab-content">
+                    <h3>Parties du pied</h3><br />
+                    <p class="pied">
+                        <strong>TOE : pointe</strong>
+                        <strong>BALL : plante</strong>
+                        <strong>FLAT : pied</strong>
+                        <strong>HEEL : talon</strong>
+                        <strong>IN(SIDE) : intérieur</strong>
+                        <strong>OUT(SIDE) : extérieur</strong>
+                    </p><br />
+                    <h3>Terminologie des pas</h3>
+                    <br />
+                    <div class="pas">
+                        <strong>COASTER STEP</strong> <p>pas d’un pied en arrière, l’autre à côté du 1er, le premier fait un pas en avant<br />
+                        (derrière, à côté, devant)</p>
+                        <strong>VINE</strong> <p>un pas sur le côté, croiser sur la plante derrière, pas sur le côté, toucher (ou autre pas)</p>
+                        <strong>HITCH</strong> <p>lever le genou, pied tendu</p>
+                        <strong>HOOK</strong> <p>ramener le talon du pied libre devant la cheville de la jambe à terre</p>
+                        <strong>FLICK</strong> <p>plier le genou de la jambe libre et coup de pied en arrière</p>
+                        <strong>KICK</strong> <p>lever le genou et donner un coup de pied vers l’avant pointe tendue</p>
+                        <strong>KICK BALL CHANGE</strong> <p>kick d’un pied (1), poser la plante de ce pied près de l’autre pied (&), transférer le poids du corps sur l’autre pied (2)</p>
+                        <strong>ROCK STEP</strong> <p>transfert du poids du corps d’un pied sur l’autre : déplacer un pied dans la direction et revenir sur l’autre pied (j’y vais, je n’y vais pas)</p>
+                        <strong>SAILOR STEP</strong> <p>LEFT : pied gauche croisé derrière pied droit (1), pied droit à droite (&), pied gauche à gauche (2)</p>
+                        <strong>HEEL STRUT</strong> <p>mouvement avant, mettre le talon au sol puis abaisser l’avant du pied avec changement du poids du corps</p>
+                        <strong>TOE STRUT</strong> <p>mouvement avant ou arrière, poser l’avant du pied (1) puis abaisser le talon avec changement du poids du corps (2)</p>
+                        <strong>TRIPLE STEP / SHUFFLE</strong> <p>3 pas sur 2 temps (1 & 2)<br />
+                        Avant ou arrière : pas d’un pied, amener l’autre pied près du 1er, pas du 1er pied<br />
+                        A gauche ou à droite : pas d’un pied sur le côté, amener l’autre pied près du 1er, pas du 1er sur le côté</p>
+                        <strong>STOMP</strong> <p>frappe du pied avec transfert du poids du corps</p>
+                        <strong>STOMP UP</strong> <p>frappe du pied sans transfert du poids du corps</p>
+                        <strong>BRUCH</strong> <p>brosser le sol avec la plante du pied</p>
+                        <strong>SCUFF</strong> <p>brosser le sol avec le talon</p>
+                        <strong>TOE SPLIT</strong> <p>les pointes des pieds s’écartent vers l’extérieur, retour au centre</p>
+                        <strong>HELL SPLIT</strong> <p>les talons s’écartent vers l’extérieur et retour au centre</p>
+                        <strong>TOE FAN</strong> <p>la pointe du pied tourne à l’extérieur, en pivotant sur le talon et retour au centre</p>
+                        <strong>HEEL FAN</strong> <p>le talon qui tourne à l’extérieur, en pivotant sur la pointe du pied et retour au centre</p>
+                        <strong>BUMP</strong> <p>coup de hanche sur le côté vers l’arrière</p>
+                        <strong>JAZZ BOX</strong> <p>pied droit passe devant le pied gauche, et se pose au sol, pied gauche se pose légèrement en diagonal derrière, pied droit à côté du pied gauche</p>
+                    </div>
+                </div>
             </mat-tab>
             <mat-tab label="Pourquoi pratiquer la danse Country ?">
                 <h1>Some more tab content</h1>
