STYLE : add responsive style

--- a/src/app/b-aba/b-aba.component.html
+++ b/src/app/b-aba/b-aba.component.html
@@ -114,8 +114,33 @@
                 </div>
             </mat-tab>
             <mat-tab label="Pourquoi pratiquer la danse Country ?">
-                <h1>Some more tab content</h1>
-                <p>...</p>
+                <div class="tab-content">
+                    <img class="pratiquer" src="/assets/img/b-a-ba/illu-pratiquer-country.png" alt="illustration pourquoi pratiquer la country" />
+                    <p>
+                        <strong>Côté sportif</strong><br />
+                        La pression sanguine et le rythme cardiaque diminuent, les muscles travaillent tout en douceur, et notre corps nous dit “merci”.<br /><br />
+
+                        En dansant, on prend conscience de son corps, et de ses déplacements dans l'espace. On améliore sa mobilité et son équilibre, des bienfaits que l'on retrouve dans sa vie personnelle.<br /><br />
+
+                        <strong>Coté émotions</strong><br />
+                        Pratiquer la danse permet de transmettre émotions et messages par le mouvement.<br /><br />
+
+                        Une fois dans notre bulle, nous nous libérons du regard de l'autre pour laisser place à la connexion à soi. Réceptifs à nos émotions, nous les ressentons plus fortement afin de mieux nous connaître et prendre confiance en nous.<br /><br />
+
+                        <strong>Coté sensations</strong><br />
+                        Quand nous dansons, notre cerveau libère des endorphines, des neurotransmetteurs qui génèrent une sensation de bien-être, de détente, de joie et de liberté. La musique et la danse activent dans notre cerveau des circuits moteurs et sensoriels mais aussi les centres du plaisir.<br /><br />
+
+                        <em>La danse rend heureux.</em><br /><br />
+
+                        <strong>Côté ambiance</strong><br />
+                        La country est tout d’abord une grande famille.<br /><br />
+
+                        Elle rassemble toutes les générations autour de son concept, et est avant tout une passion. Tout le monde est bienvenu dans ce cercle, les nouveaux sont immédiatement intégrés et même coachés par les plus anciens.<br /><br />
+
+                        L’ambiance est très conviviale, personne ne parle de profession, milieu social… c’est juste un rassemblement de passionnés de danse et de musique country qui aiment partager du temps, des danses et des moments festifs ensemble.
+                    </p>
+                    <br clear="both" />
+                </div>
             </mat-tab>
         </mat-tab-group>
     </section>
