--- a/src/app/b-aba/b-aba.component.scss
+++ b/src/app/b-aba/b-aba.component.scss
@@ -38,7 +38,8 @@
 
             img {
                 float: left;
-                margin-right: 10px;
+                max-width: 100%;
+                margin-right: 20px;
             }
 
             img.decoupage {
@@ -59,6 +60,7 @@
             p.pied {
                 display: flex;
                 justify-content: space-evenly;
+                flex-wrap: wrap;
                 padding: 20px 0;
                 border-top: 1px solid lightgrey;
                 border-bottom: 1px solid lightgrey;
@@ -69,6 +71,27 @@
                 grid-template-columns: 200px auto;
                 row-gap: 20px;
             }
+
+            img.pratiquer {
+                width: 30%;
+            }
         }
+    }
+}
+
+@media (max-width: 820px) {
+    .container-baba section .tab-content {
+        img {
+                float: none;
+                display: block;
+                margin: auto;
+        }
+    }
+}
+
+@media (max-width: 740px) {
+    .container-baba section .tab-content .pas {
+        display: flex;
+        flex-direction: column;
     }
 }
