--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -14,7 +14,7 @@
                     <div class="menu" [class.is-open]="isMenuOpen">
                         <ul [class.is-open]="isMenuOpen">
                             <li><a href="#" routerLink="/" class="nav-link">Accueil</a></li>
-                            <li><a href="#" routerLink="/coming-soon" class="nav-link">B-A-BA de la country</a></li>
+                            <li><a href="#" routerLink="/b-a-ba" class="nav-link">B-A-BA de la country</a></li>
                             <li><a href="#" routerLink="/coming-soon" class="nav-link">Agenda</a></li>
                             <li><a href="#" routerLink="/club" class="nav-link">Le club</a></li>
                             <li><a href="#" routerLink="/coming-soon" class="nav-link">Livre d'or</a></li>
