REFACTOR : add illu pot commun

--- a/src/app/b-aba/b-aba.component.html
+++ b/src/app/b-aba/b-aba.component.html
@@ -50,7 +50,8 @@
                         Une à deux fois par an, les animateurs se réunissent pour élire des danses à intégrer dans les programmes d'apprentissage et dans les bals. Le « Pot commun national » est un petit guide qui permet à chaque danseur de retrouver ce qui se danse le plus un peu partout en France. De plus, chaque région possède son propre Pot commun.<br /><br />
 
                         Chaque animateur propose plusieurs chorégraphies de différents niveaux et différents styles. Les animateurs votent ensuite pour les chorées qu'ils préfèrent. Les chorégraphies emportant la majorité des votes sont élues.
-                    </p>
+                    </p><br />
+                    <img class="pot" src="/assets/img/b-a-ba/illu-pot.jpg" alt="illustration pot commun" />
                 </div>
             </mat-tab>
             <mat-tab label="L'étiquette de la piste">
