REFACTOR : add link to agenda nav

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,7 +15,7 @@
                         <ul [class.is-open]="isMenuOpen">
                             <li><a href="#" routerLink="/" class="nav-link">Accueil</a></li>
                             <li><a href="#" routerLink="/b-a-ba" class="nav-link">B-A-BA de la country</a></li>
-                            <li><a href="#" routerLink="/coming-soon" class="nav-link">Agenda</a></li>
+                            <li><a href="#" routerLink="/agenda" class="nav-link">Agenda</a></li>
                             <li><a href="#" routerLink="/club" class="nav-link">Le club</a></li>
                             <li><a href="#" routerLink="/coming-soon" class="nav-link">Livre d'or</a></li>
                             <li><a href="#" routerLink="/coming-soon" class="nav-link">Galerie</a></li>
