REFACTOR : add head agenda page

--- a/src/app/agenda/agenda.component.html
+++ b/src/app/agenda/agenda.component.html
@@ -1,1 +1,8 @@
-<p>agenda works!</p>
+<app-nav></app-nav>
+<section class="container-agenda">
+    <div class="head">
+        <h2>Agenda</h2>
+        <a target="_blank" href="/assets/docs/agenda.pdf" class="btn secondary">Télécharger l'agenda fin 2023</a>
+    </div>
+    <p>agenda works!</p>
+</section>
