STYLE : style collapsible title

--- a/src/app/agenda/agenda.component.html
+++ b/src/app/agenda/agenda.component.html
@@ -4,5 +4,32 @@
         <h2>Agenda</h2>
         <a target="_blank" href="/assets/docs/agenda.pdf" class="btn secondary">Télécharger l'agenda fin 2023</a>
     </div>
-    <p>agenda works!</p>
+    <mat-accordion [multi]="true">
+        <mat-expansion-panel>
+            <mat-expansion-panel-header>
+                Septembre 2023
+            </mat-expansion-panel-header>
+            This the expansion 1 content
+        </mat-expansion-panel>
+      
+        <mat-expansion-panel>
+            <mat-expansion-panel-header>
+                Octobre 2023
+            </mat-expansion-panel-header>
+            This the expansion 1 content
+        </mat-expansion-panel>
+
+        <mat-expansion-panel>
+            <mat-expansion-panel-header>
+                Novembre 2023
+            </mat-expansion-panel-header>
+            This the expansion 1 content
+        </mat-expansion-panel>
+        <mat-expansion-panel>
+            <mat-expansion-panel-header>
+                Décembre 2023
+            </mat-expansion-panel-header>
+            This the expansion 1 content
+        </mat-expansion-panel>
+    </mat-accordion>
 </section>
