--- a/src/app/agenda/agenda.component.scss
+++ b/src/app/agenda/agenda.component.scss
@@ -53,5 +53,15 @@
         font-weight: bold;
         color: var(--backgroundColor);
     }
-    
+
+    .agenda-content {
+        display: grid;
+        grid-template-columns: 150px auto;
+        row-gap: 20px;
+        margin-top: 10px;
+
+        a {
+            color: var(--textColor);
+        }
+    }
 }
