STYLE : add illu agenda

--- a/src/app/agenda/agenda.component.html
+++ b/src/app/agenda/agenda.component.html
@@ -3,6 +3,7 @@
     <div class="head">
         <h2>Agenda</h2>
         <a target="_blank" href="/assets/docs/agenda.pdf" class="btn secondary">Télécharger l'agenda</a>
+        <img src="/assets/img/illu-agenda.jpg" alt="illustration agenda" />
     </div>
     <mat-accordion [multi]="true">
         <mat-expansion-panel>
