REFACTOR : add event dimanche 29 octobre + suppr septembre

--- a/src/app/agenda/agenda.component.html
+++ b/src/app/agenda/agenda.component.html
@@ -8,72 +8,6 @@
     <mat-accordion [multi]="true">
         <mat-expansion-panel>
             <mat-expansion-panel-header>
-                Septembre 2023
-            </mat-expansion-panel-header>
-            <div class="agenda-content">
-                <strong>Vendredi 08</strong>
-                <p>
-                    Bal CD 100% country animé par Nadine au Moulin Tropical 35 Rue Dinetard à <strong>TOULOUSE (31)</strong><br />
-                    Prébal vers 19h45 Bal 21h<br />
-                    Entrée 7 euros avec une boisson offerte.<br />
-                    Renseignements au <a href="tel:+33610018588">06.10.01.85.88</a> ou <a href="mailto:dinette.peyrot@gmail.com">dinette.peyrot@gmail.com</a><br />
-                    21h bal CD
-                </p>
-
-                <strong>Vendredi 08</strong>
-                <p>
-                    Bal country au Stiletto de <strong>ST LIEUX LES LAVAUR (81)</strong><br />
-                    Choix visiteurs à partir de 19h30 à 21h<br />
-                    Playlist 21h 1h<br />
-                    Choix visiteurs des derniers en fin de playlist<br />
-                    Entrée 9 euros<br />
-                    Possibilité de réserver des assiettes tapas.
-                </p>
-
-                <strong>Samedi 09</strong>
-                <p>
-                    Bal A l'espace Armonia à <strong>BESSIÈRES</strong> (Av.Aimé Césaire) proche collège.<br />
-                    Tombola : un sejour au festival country de santa suzanna du 22 octobreau 28 octobre<br />
-                    Animation Funny country 31.
-                </p>
-
-                <strong>Dimanche 10</strong>
-                <p>
-                    Bal CD" country line" à la salle des fêtes chemin des Boulbenes de <strong>SEYSSES (31)</strong><br />
-                    Prébal à 13h15 Bal à 14h - Entrée 5 Euros<br />
-                    Avec une petite bouteille d'eau ou un café offert Patisseries et confiseries offertes<br />
-                    organisé par Freedom Dance Country et animé par Nadine<br />
-                    Renseignements : <a href="mailto:freedomdc@hotmail.fr">freedomdc@hotmail.fr</a>
-                </p>
-
-                <strong>Vendredi 22</strong>
-                <p>
-                    Bal CD Country et Modern Line à la salle des fêtes Boris Vian de <strong>LA SALVETAT ST
-                    GILLES</strong> animé par Nadine<br />
-                    Prébal un peu avant 20h<br />
-                    Bal à 21h<br />
-                    Entrée 5 euros avec une boisson offerte<br />
-                    Renseignements : <a href="mailto:dinette.peyrot@gmail.com">dinette.peyrot@gmail.com</a> ou <a href="tel:+33610018588">06.10.01.85.88</a>
-                </p>
-
-                <strong>Dimanche 24</strong>
-                <p>
-                    Mini stage country de 13h à 15h suivi d'un mini bal de 15h à 18h30 environ salle du Berjean à <strong>ESCALQUENS</strong><br /><br />
-                    Les danses du mini stage seront :<br />
-                    Nothing Good de Bruno Morel <a target="_blank" href="https://www.youtube.com/watch?v=gaQbJaElk9Q">https://www.youtube.com/watch?v=gaQbJaElk9Q</a><br />
-                    Quarter After One <a target="_blank" href="https://www.youtube.com/watch?v=BUcRn6QG5Ww&t=245s">https://www.youtube.com/watch?v=BUcRn6QG5Ww&t=245s</a><br />
-                    First Meeting de Stefano Civa et David Lecaillon <a target="_blank" href="https://www.youtube.com/watch?=INygzg6Mg2o">https://www.youtube.com/watch?=INygzg6Mg2o</a><br /><br />
-                    Comme d'habitude gâteaux boissons et café sont offerts et à volonté<br />
-                    Stage 5 euros Mini bal 5 euros<br />
-                    Mais ATTENTION les places sont limitées à 40 afin d'être à l'aise pour danser!<br />
-                    Par conséquent merci de vous inscrire si vous êtes intéressé !<br />
-                    Nadine Peyrot : <a href="mailto:dinette.peyrot@gmail.com">dinette.peyrot@gmail.com</a><br />
-                </p>
-            </div>
-        </mat-expansion-panel>
-      
-        <mat-expansion-panel>
-            <mat-expansion-panel-header>
                 Octobre 2023
             </mat-expansion-panel-header>
             <div class="agenda-content">
@@ -156,10 +90,20 @@
                     Facebook : <a target="_blank" href="https://www.facebook.com/Countrylinedancesaintlys">https://www.facebook.com/Countrylinedancesaintlys</a>
                 </p>
 
+                <strong>Samedi 28</strong>
+                <p>
+                    Bal CD spécial pour Débutants à la salle des Fêtes de <strong>St ETIENNE DE TULMONT (82)</strong><br />
+                    A partir de 20h30<br />
+                    organisé par Country Saloon 82.
+                </p> 
+
                 <strong>Dimanche 29</strong>
                 <p>
                     Bal CD à la salle des Fêtes de <strong>St ETIENNE DE TULMONT (82)</strong><br />
-                    Organisé par Country saloon 82</p>
+                    Initiation gratuite à 10h<br />
+                    Puis bal CD à 14h<br />
+                    Organisé par Country saloon 82
+                </p>
             </div>
         </mat-expansion-panel>
 
