REFACTOR : add nav + event head

--- a/src/app/evenements-club/evenements-club.component.html
+++ b/src/app/evenements-club/evenements-club.component.html
@@ -1,1 +1,6 @@
-<p>evenements-club works!</p>
+<app-nav></app-nav>
+<section class="container-events">
+    <div class="head">
+        <h2>Evenements du club</h2>
+    </div>
+</section>
