REFACTOR: head soirée 28/29 oct

--- a/src/app/soiree-oct/soiree-oct.component.html
+++ b/src/app/soiree-oct/soiree-oct.component.html
@@ -1,1 +1,7 @@
-<p>soiree-oct works!</p>
+<app-nav></app-nav>
+<section class="event-container">
+    <div class="head">
+        <h2>Soiree et apres midi dansants</h2>
+        <h3>Samedi 28 et Dimanche 29 Octobre 2023</h3>
+    </div>
+</section>
