REFACTOR: add img event

--- a/src/app/soiree-oct/soiree-oct.component.html
+++ b/src/app/soiree-oct/soiree-oct.component.html
@@ -3,5 +3,11 @@
     <div class="head">
         <h2>Soiree et apres midi dansants</h2>
         <h3>Samedi 28 et Dimanche 29 Octobre 2023</h3>
+        <a class="btn secondary" target="_blank" href="/assets/docs/soiree2829Oct23.pdf">Télécharger le programme</a>
+    </div>
+    <div class="event-content">
+        <img src="/assets/img/events-img/soiree2829Oct23.png" alt="soirée du 28 et 29 octobre 2023" />
+        <img src="/assets/img/events-img/playlist28Oct23.png" alt="playlist soirée du 28 octobre 2023" />
+        <img src="/assets/img/events-img/playlist29Oct23.png" alt="playlist soirée du 29 octobre 2023" />
     </div>
 </section>
