STYLE: modif media queries agenda

--- a/src/app/agenda/agenda.component.scss
+++ b/src/app/agenda/agenda.component.scss
@@ -73,3 +73,9 @@
         }
     }
 }
+
+@media (max-width: 360px) {
+    .container-agenda .agenda-content {
+        grid-template-columns: 100%;
+    }
+}
