--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,4 @@
+<app-happy-new-year></app-happy-new-year>
 <app-header></app-header>
 <div class="home-page-container">
     <section class="mot-president">      
