--- a/src/app/happy-new-year/happy-new-year.component.scss
+++ b/src/app/happy-new-year/happy-new-year.component.scss
@@ -14,3 +14,19 @@
         max-height: 100%;
     }
 }
+
+.pop-up-closed {
+    display: none;
+}
+
+.close-pop-up {
+    cursor: pointer;
+    position: absolute;
+    right: 0;
+    transform: translateX(-50%);
+    top: 20px;
+    margin-right: 20px;
+    display: block;
+    font-size: 50px;
+    color: var(--backgroundColor);     
+}
