feat: add hny card to club page

--- a/src/app/club/club.component.scss
+++ b/src/app/club/club.component.scss
@@ -36,6 +36,12 @@
         max-width: 917px;
         position: relative;
         margin: 50px auto;
+
+        img {
+            width: 50%;
+            float: left;
+            margin-right: 20px;
+        }
         
         &::after {
             content: '';
