--- a/src/app/club/club.component.html
+++ b/src/app/club/club.component.html
@@ -6,6 +6,8 @@
         <a href="/assets/docs/fiche-adhésion.pdf" target="_blank" class="btn">Télécharger la fiche d'adhésion</a> <a href="#" routerLink="/cours" class="btn secondary">Voir les cours</a>
     </section>
     <section class="histoire">
+        <img src="/assets/img/happy-new-year.png" alt="Bonne année 2024 !" />
+
         Notre association est née en début de l’année 2018, par cinq danseurs, « Country saloon music sté », qui voulaient pouvoir réviser les nombreuses chorégraphies apprises dans un autre club.<br />
         Très vite d’autres danseurs nous ont rejoints pour se retrouver huit en fin de première saison, la municipalité nous a mis à disposition une petite salle, « ancienne poste », le jeudi.<br /><br />
 
@@ -17,7 +19,7 @@
 
         2022, notre progression du nombre d’adhérents se poursuit, une nouvelle organisation se met en place pour gérer l’apprentissage.<br /><br />
 
-        En mars 2023, nous avons organisé un après-midi initiation suivie d’une soirée concert avec le groupe DUSTY ROADS, un grand succès qui nous a motivé pour le futur.<br /><br />
+        En mars 2023, nous avons organisé un après-midi initiation suivie d’une soirée concert avec le groupe DUSTY ROADS, un grand succès qui nous a motivé pour le futur.<br clear="both" /><br />
         
         En avril, notre premier bal CD fut une belle réussite. Au dernier trimestre, nous avons créé un cours de danse Partner « couple ». Nous avons terminé la saison avec 39 adhérents.<br /><br />
 
