refactor: change contact mail

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -17,7 +17,7 @@
             </p>
             <p>
                 <strong>Adresse mail</strong><br />
-                <a href="mailto:countrysaloon82@gmail.com">countrysaloon82@gmail.com</a>
+                <a href="mailto:country.saloon.82.fr@gmail.com">country.saloon.82.fr@gmail.com</a>
             </p>
             <p>
                 <strong>Page facebook</strong><br />
