--- a/src/app/club/club.component.html
+++ b/src/app/club/club.component.html
@@ -37,12 +37,11 @@
         <h2>Bureau du club</h2>
         <div class="container-bureau">
             <img src="/assets/img/club-photos/Louis.png" alt="président du club">
-            <img src="/assets/img/club-photos/Frédéric.png" alt="président adjoint">
+            <img src="/assets/img/club-photos/Frédéric.png" alt="vice président">
             <img src="/assets/img/club-photos/Joëlle.png" alt="trésorière">
             <img src="/assets/img/club-photos/Martine.png" alt="trésorière adjointe">
-            <img src="/assets/img/club-photos/Philippe.png" alt="secrétaire">
-            <img src="/assets/img/club-photos/Sandrine.png" alt="secrétaire adjointe">
-            <img src="/assets/img/club-photos/Nathalie.png" alt="animatrice">
+            <img src="/assets/img/club-photos/Audrey.png" alt="secrétaire">
+            <img src="/assets/img/club-photos/Nathalie.png" alt="secrétaire adjointe">
         </div>
     </section>
 </div>
