refactof: add photography course page

--- a/src/app/cours/cours.component.html
+++ b/src/app/cours/cours.component.html
@@ -22,6 +22,7 @@
                     Salle Zawislack, en face de la mairie de Saint-Etienne de Tulmont<br />
                     6 Rue de la Poste, 82410 Saint-Etienne-de-Tulmont
                     <img class="map" src="/assets/img/salle-zawislack-map.png" alt="Plan salle Zawislack" />
+                    <img class="map" src="/assets/img/salle-zawislack.jpeg" alt="Salle Zawislack" />
                 </p>
             </div>
             <div class="salle-fetes">
@@ -39,6 +40,7 @@
                     Salle des fêtes de Saint-Etienne de Tulmont<br />
                     Rue des sports, 82410 Saint-Etienne-de-Tulmont
                     <img class="map" src="/assets/img/salle-fetes-map.png" alt="Plan salle des fêtes" />
+                    <img class="map" src="/assets/img/salle-fetes.jpeg" alt="Salle des fêtes" />
                 </p>
             </div>
         </div>
