fete de la musique

--- a/src/app/happy-new-year/happy-new-year.component.html
+++ b/src/app/happy-new-year/happy-new-year.component.html
@@ -1,4 +1,4 @@
-<!--<div class="container-happy-new-year" [class.pop-up-closed]="!isCardFullscreen">
+<div class="container-happy-new-year" [class.pop-up-closed]="!isCardFullscreen">
     <span [class.close-pop-up]="isCardFullscreen" class="material-symbols-sharp close" (click)="popUpCard()"> close </span>
-    <img (click)="popUpCard()" src="/assets/img/events-img/soiree16Mars24.png" alt="Soirée du 16 Mars 2024" />
-</div>-->
+    <img (click)="popUpCard()" src="/assets/img/events-img/fetemusique2024.gif" alt="Fête de la musique 21 Juin 2024" />
+</div>
