modif course + adhesion doc + club

--- a/src/app/club/club.component.html
+++ b/src/app/club/club.component.html
@@ -6,8 +6,6 @@
         <a href="/assets/docs/fiche-adhésion.pdf" target="_blank" class="btn">Télécharger la fiche d'adhésion</a> <a href="#" routerLink="/cours" class="btn secondary">Voir les cours</a>
     </section>
     <section class="histoire">
-        <img src="/assets/img/happy-new-year.png" alt="Bonne année 2024 !" />
-
         Notre association est née en début de l’année 2018, par cinq danseurs, « Country saloon music sté », qui voulaient pouvoir réviser les nombreuses chorégraphies apprises dans un autre club.<br />
         Très vite d’autres danseurs nous ont rejoints pour se retrouver huit en fin de première saison, la municipalité nous a mis à disposition une petite salle, « ancienne poste », le jeudi.<br /><br />
 
@@ -23,7 +21,7 @@
         
         En avril, notre premier bal CD fut une belle réussite. Au dernier trimestre, nous avons créé un cours de danse Partner « couple ». Nous avons terminé la saison avec 39 adhérents.<br /><br />
 
-        Pour cette nouvelle saison qui débute, une nouvelle organisation des cours et des animateurs : nous avons rajouté un créneau horaire pour les grands débutants le jeudi dans une nouvelle salle de danse aménagée par la municipalité, nous avons opté pour mettre un maximum de moyens pour les débutants.<br /><br />
+        Pour cette nouvelle saison qui débute, une nouvelle organisation des cours et des animateurs : nous avons décalé le cours des mediums au jeudi soir et réduit le cours des débutants à une heure afin de pouvoir ajouter un créneau pour les danses de niveau intermédiaire le mercredi soir. Une fois par mois, ce cours sera remplacé par les danses en couple. Nous avons également ajouté un créneau de révision le mercredi pour se mettre en jambe pour les soirées et les démo !<br /><br />
 
         Mercredi : <br />
         Un cours médium assuré par Martine et Nathalie<br />
