--- a/src/app/cours/cours.component.html
+++ b/src/app/cours/cours.component.html
@@ -8,16 +8,18 @@
     <div class="body">
         <div class="infos-cours">
             <div class="salle-zawislack">
-                <p>
-                    <strong>Cours niveau débutant</strong>
-                    Les jeudis à 18h45 (1h30)<br />
-                    Avec Nathalie
-                </p>
-                <p>
-                    <strong>Cours "partner"</strong>
-                    Les jeudis à 20h15 (1h00)<br />
-                    Avec Pierrette et Louis
-                </p>
+                <div>
+                    <p>
+                        <strong>Cours niveau débutant</strong>
+                        Les jeudis à 18h45 (1h00)<br />
+                        Avec Nathalie
+                    </p>
+                    <p>
+                        <strong>Cours niveau medium</strong>
+                        Les jeudis à 20h00 (1h00)<br />
+                        Avec Nathalie
+                    </p>
+                </div>
                 <p>
                     Salle Zawislack, en face de la mairie de Saint-Etienne de Tulmont<br />
                     6 Rue de la Poste, 82410 Saint-Etienne-de-Tulmont
@@ -26,16 +28,28 @@
                 </p>
             </div>
             <div class="salle-fetes">
+                <div>
                 <p>
-                    <strong>Cours niveau medium</strong>
-                    Les mercredis à 18h45 (1h00)<br />
-                    Avec Nathalie et Martine
+                    <strong>Cours "révision"</strong>
+                    Les mercredis à 17h45 (1h00)<br />
+                    Avec Nathalie, Martine et Louis
                 </p>
                 <p>
                     <strong>Cours niveau novice</strong>
-                    Les mercredis à 20h00 (1h00)<br />
+                    Les mercredis à 19h00 (1h00)<br />
                     Avec Martine
                 </p>
+                <p>
+                    <strong>Cours niveau intermédiaire</strong>
+                    Les mercredis à 20h15 (1h)
+                    Avec Martine
+                </p>
+                <p>
+                    <strong>Cours "partner"</strong>
+                    Un mercredi par mois (remplace le cours de niveau intermédiaire)
+                    Avec Pierrette et Louis
+                </p>
+                </div>
                 <p>
                     Salle des fêtes de Saint-Etienne de Tulmont<br />
                     Rue des sports, 82410 Saint-Etienne-de-Tulmont
